# spellscript

./: .gitignore  README.md  pyproject.toml
examples/: factorial.spell  fibonacci.spell  read_file.spell
resources/: documentation.md
src/spellscript/: __init__.py  cli.py  spellscript.py
tests/: conftest.py  string_demo.spell  test.spell  test_interpreter.py  test_string_commands.py
